doc/docs.css
@import url(http://fonts.googleapis.com/css?family=Prosto+One|Belleza|Ubuntu+Mono);

html, body { height: 100%; }

body {
  font-family: Belleza;
  font-size: 17pt;
  max-width: 900px;
  margin: 0 auto;
  padding: 0;
}

h1, h2, h3 { font-family: "Prosto One"; }
code, pre { font-family: "Ubuntu Mono"; }

#head {
  position: relative;
  background: #95c6fb;
  padding-top: 1px;
  margin-top: 20px;
  overflow: hidden;
  border-radius: 15px;
}

#head h1 {
  margin: 20px 0 20px 30px;
  font-size: 35pt;
}

#head h1 span {
  font-size: 20pt;
  padding-left: 10px;
}

#head-image {
  width: 100%;
  display: block;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}

#main {
  padding: 0px 15px 40px 15px;
}

h2 {
  font-size: 22pt;
}

ul, ol {
  margin-left: 0; padding-left: 0;
}

li { margin-bottom: 1em; }

button {
  font-family: inherit;
  font-size: 14pt;
  padding-left: 8px; padding-right: 8px;
}

.CodeMirror {
  border: 1px solid silver;
  height: 400px;
  line-height: 1.3;
  font-size: 14pt;
  font-family: "Ubuntu Mono";
  z-index: 2;
}
.CodeMirror pre {
  padding: 0 9px;
}

.output {
  background: #eee;
  margin-top: 0;
  padding: 2px 10px;
  min-height: 1.3em;
  border: 1px solid silver;
  border-top-width: 0;
  font-size: 14pt;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}
.Tern-fname { color: black; }
.Tern-farg { color: #70a; }
.Tern-farg-current { text-decoration: underline; }
.Tern-type { color: #07c; }
.CodeMirror-hint { font-size: 12pt; }

ul.tabs {
  list-style: none;
  margin: 0 0 -1px 0;
  padding: 0 0 0 10px;
  overflow: hidden;
}
ul.tabs li {
  font-family: "Ubuntu Mono";
  font-size: 11pt;
  color: #777;
  cursor: pointer;
  margin: 0 2px 0 0;
  padding: 1px 10px 4px;
  border: 1px solid silver;
  border-bottom-width: 0px;
  background: #f3f3f3;
  display: inline-block;
  z-index: 1;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  position: relative;
}
ul.tabs li:hover {
  color: #444;
}
ul.tabs li.selected {
  background: white;
  color: #222;
  z-index: 3;
  cursor: default;
}
ul.tabs li:before,
ul.tabs li:after {
  position: absolute;
  bottom: 0;
  width: 6px;
  height: 6px;
  content: " ";
  border: 1px solid silver;
}
ul.tabs li:before {
  left: -7px;
  border-bottom-right-radius: 6px;
  border-width: 0 1px 1px 0;
  box-shadow: 2px 2px 0 #f3f3f3;
}
ul.tabs li:after {
  right: -7px;
  border-bottom-left-radius: 6px;
  border-width: 0 0 1px 1px;
  box-shadow: -2px 2px 0 #f3f3f3;
}
ul.tabs li.selected:before {
  box-shadow: 2px 2px 0 white;
}
ul.tabs li.selected:after {
  box-shadow: -2px 2px 0 white;
}

